<resources>
    <string name="app_name">Ira Movies</string>
    <string name="image_description">Informations about image</string>
    <string name="announce_update_info_account">Please update your information before using application!</string>

    <array name="menu_bottom_nav">
        <item name="movies">Movies</item>
        <item name="favorites">Favorites</item>
        <item name="settings">Settings</item>
        <item name="about">About</item>
    </array>

    <!-- Category -->
    <string name="category_popular">Popular Movies</string>
    <string name="category_top_rated">Top Rated Movies</string>
    <string name="category_up_coming">Upcoming Movies</string>
    <string name="category_now_playing">Now Playing Movies</string>

    <!-- menu -->
    <string name="search">Search</string>
    <string name="movies">Movies</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="up_coming">Up Coming</string>
    <string name="now_playing">Now Playing</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="reminders">All Reminders</string>
    <string name="about">About</string>

    <!-- Info movie_card_view -->
    <string name="release_date">Release date:</string>
    <string name="rating">Rating:</string>
    <string name="overview">Overview:</string>

    <!-- Info failure layout -->
    <string name="btn_retry">Retry</string>


    <!-- Failure messages -->
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="cannot_get_data">Something went wrong on server</string>
    <string name="no_more_data">No more data</string>

    <!-- Filter -->
    <string name="popular_movies">Popular Movies</string>
    <string name="top_rated_movies">Top Rated Movies</string>
    <string name="upcoming_movies">Upcoming Movies</string>
    <string name="nowplaying_movies">NowPlaying Movies</string>
    <string name="movie_with_rate_from">Movie with rate from:</string>
    <string name="from_release_year">From Release Year:</string>

    <!-- lable -->
    <string name="label_filter">Filter:</string>
    <string name="label_category">Category</string>
    <string name="label_movie_with_rate">Movie with rate from</string>
    <string name="label_from_release_year">From Release year</string>
    <string name="label_sort_by">Sort By</string>
    <string name="label_release_date">Release Date</string>
    <string name="label_rating_movies">Rating Movies</string>
    <string name="label_reminder_list">Reminder List:</string>
    <string name="label_copyright">Copyright@Enc 2017</string>

    <!-- button -->
    <string name="btn_cancel">Cancel</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="btn_ok">OK</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_show_all">Show All</string>
    <string name="btn_done">Done</string>

    <!-- Value Radio -->
    <string name="male">Male</string>
    <string name="female">Female</string>

    <!-- Search -->
    <string name="search_view">Search…</string>

    <string name="feature_take_photo_camera">Take Photo</string>
    <string name="feature_take_photo_gallery">Gallery</string>

    <string name="permission">Permission denied!</string>

    <string name="hint_birthday">Birthday</string>
    <string name="hint_email">Email</string>
    <string name="hint_gender">Female</string>
    <string name="hint_name">Name</string>
    <string name="error_pick_date">Invalid date</string>
    <string name="error_email_format">Email Address in invalid format</string>
    <string name="error_date_of_birth_format">Invalid Birthday</string>

</resources>
