<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/movies"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/movies" />

    <item
        android:id="@+id/favorites"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/favorites" />

    <item
        android:id="@+id/settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/settings" />

    <item
        android:id="@+id/about"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/about" />

    <item
        android:id="@+id/view_list"
        android:icon="@drawable/ic_view_list"
        android:orderInCategory="100"
        android:title="@string/app_name"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:orderInCategory="100"
        android:title="@string/search"
        android:visible="false"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always" />
</menu>