<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:id="@+id/dialog_chooser_content"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:baselineAligned="false"
      android:layout_marginTop="16dp"
      android:layout_marginBottom="16dp"
      android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/lnCamera"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/image_description"
            android:src="@drawable/ic_camera" />

        <TextView
            android:id="@+id/tvCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feature_take_photo_camera"
            android:textColor="#000000"
            android:typeface="monospace" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnGallery"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/image_description"
            android:src="@drawable/ic_gallery" />

        <TextView
            android:id="@+id/tvGallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feature_take_photo_gallery"
            android:textColor="#000000"
            android:typeface="monospace" />
    </LinearLayout>
</LinearLayout>