<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:fillViewport="true">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">

        <ImageView
            android:id="@+id/imvAvatar"
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/image_description"
            android:scaleType="fitXY"
            android:src="@drawable/placeholder"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:ellipsize="marquee"
            android:maxLines="1"
            android:textColor="#000"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imvAvatar"/>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/dataOfBirthConstrainLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="22dp"
            android:layout_marginLeft="19dp"
            android:layout_marginRight="22dp"
            android:layout_marginStart="19dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvName">

            <ImageView
                android:id="@+id/imvDateOfTheDate"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/image_description"
                android:src="@drawable/ic_birthday"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp"/>

            <TextView
                android:id="@+id/tvDateOfTheDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="22dp"
                android:layout_marginStart="22dp"
                android:ellipsize="marquee"
                android:maxLines="1"
                android:textColor="#000"
                android:textSize="18sp"
                android:hint="@string/hint_birthday"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/imvDateOfTheDate"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"/>

        </android.support.constraint.ConstraintLayout>


        <android.support.constraint.ConstraintLayout
            android:id="@+id/emailConstrainLayout"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="19dp"
            android:layout_marginStart="19dp"
            android:layout_marginTop="13dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dataOfBirthConstrainLayout">

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="22dp"
                android:layout_marginStart="22dp"
                android:ellipsize="marquee"
                android:maxLines="1"
                android:textColor="#000"
                android:hint="@string/hint_email"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/imvEmail"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                android:id="@+id/imvEmail"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/image_description"
                android:src="@drawable/ic_email"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/genderConstrainLayout"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="19dp"
            android:layout_marginStart="19dp"
            android:layout_marginTop="13dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailConstrainLayout">

            <TextView
                android:id="@+id/tvGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="22dp"
                android:layout_marginStart="22dp"
                android:ellipsize="marquee"
                android:maxLines="1"
                android:textColor="#000"
                android:textSize="18sp"
                android:hint="@string/hint_gender"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/imvGender"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                android:id="@+id/imvGender"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/image_description"
                android:src="@drawable/ic_gender"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        </android.support.constraint.ConstraintLayout>


        <Button
            android:id="@+id/btnEdit"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape_button"
            android:text="@string/btn_edit"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/genderConstrainLayout"/>


        <TextView
            android:id="@+id/tvReminderList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="16dp"
            android:text="@string/label_reminder_list"
            android:textColor="#000"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnEdit"/>

        <LinearLayout
            android:id="@+id/lytReminder1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="22dp"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="4dp"
            android:background="#20BCBC"
            android:orientation="vertical"
            android:padding="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvReminderList">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:textColor="#FFFFFF"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:textColor="#FFFFFF"
                android:textSize="16sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lytReminder2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="22dp"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="9dp"
            android:background="#20BCBC"
            android:orientation="vertical"
            android:padding="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lytReminder1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Annabelle: Creation - 2017 - 6.4/10"
                android:textColor="#FFFFFF"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2017-09-03 10:06"
                android:textColor="#FFFFFF"
                android:textSize="16sp"/>

        </LinearLayout>

        <Button
            android:id="@+id/btnShowAll"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/shape_button"
            android:text="@string/btn_show_all"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lytReminder2"/>

        <TextView
            android:id="@+id/tvCopyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_copyright"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnShowAll"/>

    </android.support.constraint.ConstraintLayout>

</ScrollView>
